--- a/product.html
+++ b/product.html
@@ -129,7 +129,7 @@
 
 
                                 <div class="small m-t-xs">
-                                    卖电1年，童叟无欺，快速发货
+                                    卖电1年，童叟无欺
                                 </div>
                                 <div class="m-t text-righ">
 
